--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <footer class="site-footer">
     <strong>Deliciousness delivered daily.</strong>
     <strong>Thank You for Trusting!!</strong>
-    <p>📍You can visit us at Poblacin, Gitagum, Mis. Or.(Gitagum plaza)</p>
+    <p>📍You can visit us at Poblacion, Gitagum, Mis. Or.(Gitagum plaza)</p>
   </footer>
 
   <script src="business.js"></script>
