--- a/index.html
+++ b/index.html
@@ -56,17 +56,19 @@
         <strong>Total</strong><strong id="cartTotal">₱0</strong>
       </div>
 
+      <div class="mssger">
+        <label class="contact-label">
+          Your name (optional)
+          <input id="buyerName" type="text" placeholder="Example: Jun Mar" />
+        </label>
+      </div>
+
       <div class="checkout-controls">
         <button id="checkoutMessenger" class="btn wide primary">Checkout via Messenger</button>
         <button id="checkoutWhatsApp" class="btn wide">Send via WhatsApp</button>
       </div>
 
       <p class="note">The order message will be copied to clipboard. Open Messenger and paste the message to send.</p>
-
-      <label class="contact-label">
-        Your name (optional)
-        <input id="buyerName" type="text" placeholder="Example: Jun Mar" />
-      </label>
     </div>
   </aside>
 
